로그인 구현 중... 핸드폰 번호 조회 실패(업체 문의해야함)

--- a/app/src/main/assets/iamport.html
+++ b/app/src/main/assets/iamport.html
@@ -13,7 +13,7 @@
            } else {
             var msg = '인증에 실패하였습니다.';
             msg += '에러내용 : ' + rsp.error_msg;
-            alert(msp);
+            Android.onFailure(msg);
            }
         });
     </script>
