--- a/app/src/main/assets/certification.html
+++ b/app/src/main/assets/certification.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <script type="text/javascript" src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
-    <script type="text/javascript" src="http://cdn.iamport.kr/js/iamport.payment-1.1.4.js"></script>
+    <script type="text/javascript" src="https://cdn.iamport.kr/js/iamport.payment-1.1.5.js"></script>
     <script type="text/javascript">
         var IMP = window.IMP;
         IMP.init('imp06112179');
